--- a/composer.json
+++ b/composer.json
@@ -13,4 +13,7 @@
     "support"    : {
         "issues": "https://github.com/zamoose/themehookalliance/issues"
     }
+    "autoload": {
+        "files": ["tha-theme-hooks.php"]
+    },    
 }
