--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
     ],
     "support"    : {
         "issues": "https://github.com/zamoose/themehookalliance/issues"
+    },
+    "autoload": {
+        "files": [
+            "tha-theme-hooks.php"
+        ]
     }
 }
